--- a/BaseGameUtils/build.gradle
+++ b/BaseGameUtils/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.3'
     }
 }
 
@@ -40,5 +40,6 @@ android {
 
     compileSdkVersion android_compile_version
     buildToolsVersion android_version
+    buildToolsVersion '25.0.0'
 }
 
