--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cordproject.lol.papercraft" >
+    package="flicktek.lol.papercraft" >
 
     <uses-feature android:name="android.hardware.type.watch" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
-        android:name=".PaperCraftApplication"
+        android:name="cordproject.lol.papercraft.PaperCraftApplication"
         android:allowBackup="true"
         android:icon="@mipmap/icon"
         android:largeHeap="true"
@@ -17,8 +18,26 @@
             android:name="com.google.android.wearable"
             android:required="false" />
 
+        <receiver
+            android:name="cordproject.lol.papercraft.FlicktekClipReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter >
+                <action android:name="com.flicktek.clip.ACTION_GESTURE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+            <intent-filter >
+                <action android:name="com.flicktek.clip.ACTION_WAKEUP"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+            <intent-filter >
+                <action android:name="com.flicktek.clip.ACTION_URI_SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </receiver>
+
         <activity
-            android:name=".MainActivity"
+            android:name="cordproject.lol.papercraft.MainActivity"
             android:launchMode="singleTask"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" >
